# clinicaltrialenv

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  baseline_agent.py  client.py  fix.py  inference.py  openenv.yaml  pyproject.toml  sync.sh  sync_duplicates.py  verify.py  verify.sh
.github/workflows/: sync-hf.yml
baseline/: run_baseline.py
clinical_trial_env/: .gitignore  Environment_Demo.ipynb  LICENSE.md  README.md  TESTING.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  verify.py
clinical_trial_env/.github/workflows/: release.yml
clinical_trial_env/clinical_trial_env/: inference.py  openenv.yaml
clinical_trial_env/clinical_trial_env/frontend/: index.html
clinical_trial_env/clinical_trial_env/server/: app.py  clinical_trial_environment.py  graders.py  patient_simulator.py  statistics.py
clinical_trial_env/frontend/: index.html
clinical_trial_env/server/: Dockerfile  app.py  clinical_trial_environment.py  graders.py  patient_simulator.py  statistics.py
server/: __init__.py  app.py  clinical_trial_environment.py  graders.py  session_store.py  statistics.py  tasks.py
